[gd_scene load_steps=26 format=3 uid="uid://bpryjurbsm8k8"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_koxt2"]
[ext_resource type="Texture2D" uid="uid://bdgqx82pyrm10" path="res://Assets/Square.png" id="2_8n1x8"]
[ext_resource type="Shader" path="res://Assets/Shaders/Pixelize.gdshader" id="2_fclcm"]
[ext_resource type="Script" path="res://addons/radial_menu/RadialMenu.gd" id="2_xkee3"]
[ext_resource type="Texture2D" uid="uid://n51f6mixwrbo" path="res://Assets/Icons/Icon1.tres" id="3_8yun3"]
[ext_resource type="Shader" path="res://Assets/Shaders/ToonShader.gdshader" id="3_n0p7u"]
[ext_resource type="Texture2D" uid="uid://cowe5rtsv67hl" path="res://Assets/Icons/Icon2.tres" id="4_hac62"]
[ext_resource type="PackedScene" uid="uid://xy4h8c210goo" path="res://Prefabs/Weapons/SeedGun.tscn" id="5_3seao"]
[ext_resource type="Texture2D" uid="uid://b22tytfdo4usv" path="res://Assets/Icons/Icon3.tres" id="5_k0j7m"]
[ext_resource type="PackedScene" uid="uid://1a4su2pkmws8" path="res://Prefabs/Weapons/WaterHose.tscn" id="6_wky5i"]
[ext_resource type="PackedScene" uid="uid://dqkywaicd1u56" path="res://Prefabs/Weapons/DigMissileLauncher.tscn" id="7_fjece"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ntao"]
shader = ExtResource("2_fclcm")
shader_parameter/pixelSize = 2

[sub_resource type="BoxMesh" id="BoxMesh_4dtle"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7mxlx"]
render_priority = 0
shader = ExtResource("3_n0p7u")
shader_parameter/RimPower = 1.0
shader_parameter/RimCutOff = 0.5
shader_parameter/RimSmoothness = 0.05
shader_parameter/RimLightBrightness = 20.0
shader_parameter/SubSurfDistortion = 1.0
shader_parameter/SubSurfTint = null
shader_parameter/SubSurfBrightness = 3.0
shader_parameter/SubSurfCutoff = 0.5
shader_parameter/SubSurfSmoothness = 0.05
shader_parameter/ToonRampOffset = 0.5
shader_parameter/ToonRampSmoothness = 0.05
shader_parameter/ToonRampTinting = null

[sub_resource type="Animation" id="Animation_ax4v1"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_couvl"]
resource_name = "Rotate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5708, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vhfcd"]
_data = {
"RESET": SubResource("Animation_ax4v1"),
"Rotate": SubResource("Animation_couvl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pth8k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mdcdi"]
radius = 4.12311

[sub_resource type="Gradient" id="Gradient_ori3y"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pxrag"]
gradient = SubResource("Gradient_ori3y")

[sub_resource type="Animation" id="Animation_fwbqg"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1300, 0)]
}

[sub_resource type="Animation" id="Animation_v2ic2"]
resource_name = "SlideIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1300, 0), Vector2(758.72, 0)]
}

[sub_resource type="Animation" id="Animation_vxih0"]
resource_name = "SlideOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(758.72, 0), Vector2(1300, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_scb8d"]
_data = {
"RESET": SubResource("Animation_fwbqg"),
"SlideIn": SubResource("Animation_v2ic2"),
"SlideOut": SubResource("Animation_vxih0")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_koxt2")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_1ntao")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(80, 80)
render_target_update_mode = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
mesh = SubResource("BoxMesh_4dtle")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_7mxlx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewportContainer/SubViewport/MeshInstance3D"]
autoplay = "Rotate"
libraries = {
"": SubResource("AnimationLibrary_vhfcd")
}

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.787613, 0.61617, 0, -0.61617, 0.787613, 0, 1.47446, 1.65038)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.353553, 0.707107, -0.612372, -0.353553, 0.707107, 0.612372, 0.866025, 0, 0.5, 0, 0, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_8n1x8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pth8k")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ItemPickup" type="Area2D" parent="."]
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPickup"]
shape = SubResource("CircleShape2D_mdcdi")

[node name="Muzzle" type="Marker2D" parent="."]

[node name="LeftWeapon" type="Marker2D" parent="."]

[node name="SeedGun" parent="LeftWeapon" instance=ExtResource("5_3seao")]

[node name="RightWeapon" type="Marker2D" parent="."]

[node name="WaterHose" parent="RightWeapon" instance=ExtResource("6_wky5i")]

[node name="MissileLauncher" type="Marker2D" parent="."]

[node name="DiggingMissiles" parent="MissileLauncher" instance=ExtResource("7_fjece")]

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RadialMenu" type="Container" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xkee3")
width_min = 0.21
bevel_enabled = true
modulate_enabled = true
icon_shift = 10.0

[node name="Dig" type="TextureButton" parent="Control/RadialMenu"]
modulate = Color(0.713726, 0.713726, 0.713726, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("3_8yun3")
texture_pressed = ExtResource("3_8yun3")
texture_hover = ExtResource("3_8yun3")

[node name="Water" type="TextureButton" parent="Control/RadialMenu"]
modulate = Color(0.713726, 0.713726, 0.713726, 1)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("4_hac62")
texture_pressed = ExtResource("4_hac62")
texture_hover = ExtResource("4_hac62")

[node name="Plant" type="TextureButton" parent="Control/RadialMenu"]
modulate = Color(0.713726, 0.713726, 0.713726, 1)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("5_k0j7m")
texture_pressed = ExtResource("5_k0j7m")
texture_hover = ExtResource("5_k0j7m")

[node name="Selection" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 80.0
offset_right = 75.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
text = "Water"
horizontal_alignment = 1
vertical_alignment = 2

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Container" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Container"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BulletCount" type="Label" parent="GUI/Container/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bullets: 0"

[node name="MissileCount" type="Label" parent="GUI/Container/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Missiles: 0"

[node name="Panel" type="Panel" parent="GUI/Container"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.659
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1300.0
offset_right = 2871.77
offset_bottom = 2592.0
grow_horizontal = 0
grow_vertical = 2

[node name="LeftArm" type="TextureRect" parent="GUI/Container/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.36
offset_top = -121.0
offset_right = -67.36
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_pxrag")
expand_mode = 1

[node name="RightArm" type="TextureRect" parent="GUI/Container/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 75.64
offset_top = -122.0
offset_right = 147.64
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_pxrag")
expand_mode = 1

[node name="Missiles" type="TextureRect" parent="GUI/Container/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.36
offset_top = -261.0
offset_right = 42.64
offset_bottom = -194.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_pxrag")
expand_mode = 1

[node name="UIAnimationPlayer" type="AnimationPlayer" parent="GUI/Container"]
unique_name_in_owner = true
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_scb8d")
}

[connection signal="area_entered" from="ItemPickup" to="." method="_on_item_pickup_area_entered"]
[connection signal="hovered" from="Control/RadialMenu" to="." method="_on_radial_menu_hovered"]
[connection signal="pressed" from="Control/RadialMenu/Dig" to="." method="_on_dig_pressed"]
[connection signal="pressed" from="Control/RadialMenu/Water" to="." method="_on_water_pressed"]
[connection signal="pressed" from="Control/RadialMenu/Plant" to="." method="_on_plant_pressed"]
